--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="monstera, vrste monstera, monstera deliciosa, monstera borsigiana, monstera adansonii, monstera minima, 
+                                   monstera obliqua, monstera dubia, monstera subpinnata, monstera variegata, nega monstera" />
+    <meta name="title" content="Monstera family" />
+    <meta name="copyright" content="Nina Zollner">
+    <meta name="description" content="Monstera family je sajt koji sadrzi informacije i vrste o porodici biljaka monstere. 
+                                      Na ovom mestu mozete saznati sve vezano za negu monstera biljke, kao i adekvatne uslove za odgajanje iste." />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/icon.jpg" type="image/x-icon">
@@ -33,13 +39,13 @@
         </div>
         <div class="deliciosaBorsigiana">
             <article>
-                <figure><img src="img/deliciosa.jpg" alt="Biljka u saksiji" height="500">
+                <figure><img src="img/deliciosa.jpg" alt="Monstera deliciosa" height="500">
                         <figcaption>Slika 1: Monstera deliciosa</figcaption>
                 </figure>
                 <p>Ova vrsta je najzastupljenija kod nas. Ono što je posebno ističe u odnosu na ostale vrste je najveća otpornost kada su u pitanju bolesti i štetočine. Kako generalno biljka monstera važi za otpornu biljku, ova vrsta se izrazito ističe i po tome što može bez problema preživeti sušu i zanemarljive uslove. Kada je u pitanju nega ove vrste, ona je ista kao za sve. Kao nezaobilazan detalj za unutrašnji prostor, arhitekte preporučuju ovu vrstu ukoliko posedujete primese skandinavkog enterijera.</p>
             </article>
             <article>
-                <figure><img src="img/borsigiana.jpg" alt="Biljka u saksiji na ormanu" height="500">
+                <figure><img src="img/borsigiana.jpg" alt="Monstera borsigiana" height="500">
                         <figcaption>Slika 2: Monstera borsigiana</figcaption>
                 </figure>
                 <p>Borsigiana je vrsta veoma slicna deliciosi. Neki bi rekli da su te dve vrste potpuno iste, ali postoje razlike izmedju njih. Borsigiana raste kao lozica, tacnije puzavica je. Njeni vazdusni koreni rastu na taj nacin da u svom prirodnom stanisnu borsigiana ima lijane (setite se Tarzana).Te lijane dosezu skroz do zemlje, a sa ogromnih visina, jer se borsigiana penje uz drvece u dzunglama.</p>
@@ -48,13 +54,13 @@
         <div class="razlike">
             <h4>Glavne razlike izmedju deliciose i borsigiane</h4>
             <p>Rekli smo da je borsigiana puzavica, dok deliciosa vise raste u sirinu. Smatra se da borsigiana ne može razviti velike listove, već “samo” do 50cm. Dok listovi deliciose mogu dosegnuti i 1m u dužinu i širinu. Još jedna razlika je u brzini rasta same biljke. Smatra se da borsigiana raste puno brže, odnosno da češće razvija nove listove u odnosu na deliciosu.</p>
-            <figure><img src="img/borsigiana_vs_deliciosa.jpg" alt="Dve vrste biljke monstere">
+            <figure><img src="img/borsigiana_vs_deliciosa.jpg" alt="Monstera deliciosa i borsigiana">
                     <figcaption>Slika 3: Monstera deliciosa (levo) i borsigiana (desno).</figcaption>
             </figure>
         </div>
     <article class="adansonii">
         <h3>Monstera Adansonii</h3>
-        <figure><img src="img/adansoni.jpg" alt="Tri listica biljke" width="600">
+        <figure><img src="img/adansoni.jpg" alt="Monstera adansonii" width="600">
                 <figcaption>Slika 4: Monstera adansonii</figcaption>
         </figure>
         <p>Monstera Adansonii (ili Monstera Friedrichsthalii) ima vrlo tanke ovalne listove “prošarane” rupicama. U žargonu je poznata i pod nazivom Švajcarski sir. Monstera Adansonii se u divljini penje po stablima, i upravo joj je to najprirodniji “oblik”. Možete joj postaviti nekakvu vrstu potpore u teglu i ona će se malo po malo početi penjati po tome. Na ovaj će se način Monstera brže razvijati i uz to će razvijati i veće listove.</p>
@@ -62,35 +68,35 @@
     </article> 
     <article class="minima">
         <h3>Monstera Minima</h3>
-        <figure><img src="img/minima.jpg" alt="Biljka u saksiji na stolu" width="600">
+        <figure><img src="img/minima.jpg" alt="Monstera minima" width="600">
                 <figcaption>Slika 5: Monstera Minima</figcaption>
         </figure>
         <p>Rhaphidophora tetrasperma je sobna biljka poznatija po nazivu Mini Monstera ili Monstera minima. Mini Monstera je u prirodi puzavica koja se uz pomoć svojih vazdusnih korena penje po stablima. Reč je zapravo o biljci iz roda Rhaphidophora. Dakle nije vrsta Monstere, niti vrsta Philodendrona. Naziv “Mini Monstera” je dobila zbog svojih listova, koji podsećaju na manju verziju listova Monstere deliciose. Zato je lako da dođe do zabune oko samog naziva.</p>
     </article>  
     <article class="obliqua">
         <h3>Monstera Obliqua</h3>
-        <figure><img src="img/obliqua.jpg" alt="List u saksiji" height="400">
+        <figure><img src="img/obliqua.jpg" alt="Monstera obliqua" height="400">
                 <figcaption>Slika 6: Monstera Obliqua</figcaption>
         </figure>
         <p>Monstera Obliqua je retka biljka poznata po lišću nalik čipki. Dugi šiljasti listovi imaju velike rupe u sebi s “više rupa nego listova”. Iako je slična rasprostranjenoj Monsteri adansonii, Monstera obliqua ima još više rupa u lišću. Monstera Obliqua je poreklom iz tropskih regija u Srednjoj i Južnoj Americi </p>
     </article>
     <article class="dubia">
         <h3>Monstera Dubia</h3>
-        <figure><img src="img/dubia.jpg" alt="Biljka koja se penje uz dasku" height="500">
+        <figure><img src="img/dubia.jpg" alt="Monstera dubia" height="500">
                 <figcaption>Slika 7: Monstera Dubia</figcaption>
         </figure>
         <p>Poznata i kao Shingle Plant, je jedinstvena i zanimljiva biljka koja pripada rodu Monstera. Dobila je ime po svojim karakterističnim listovima koji podsećaju na preklapajuće pločice ili crepove. Listovi su manji nego kod ostalih vrsta Monstera. Lišće ima sjajnu, tamnozelenu boju koja stvara prekrasan kontrast s njezinim svetlijim stabljikama.</p>
     </article>
     <article class="subpinnata">
         <h3>Monstera Subpinnata</h3>
-        <figure><img src="img/subpinnata.jpg" alt="Tri lista biljke u saksijici" height="500">
+        <figure><img src="img/subpinnata.jpg" alt="Monstera subpinnata" height="500">
                 <figcaption>Slika 8: Monstera Subpinnata</figcaption>
         </figure>
         <p>Monstera subpinnata je unikatna monstera sa veoma izrazenim rastom lista. Listovi podsecaju na listove palme, dok se vremenom blago savijaju. Puzavica je u prirodi, a aodrasla biljka moze imati veoma velike listove.</p>
     </article>
     <article class="variegata">
         <h3>Monstera Variegata</h3>
-        <figure><img src="img/monstera_variegata.jpg" alt="Zeleno beli listovi" width="600">
+        <figure><img src="img/monstera_variegata.jpg" alt="Monstera variegata" width="600">
                 <figcaption>Slika 9: Monstera Variegata</figcaption>
         </figure>
         <p>Jedna od najtrazenijih i najlepsih vrsta monstera. Zovu je jos i "Kraljicom biljaka".</p>
@@ -116,7 +122,7 @@
             <article>
                 <h3>Zemljiste</h3>
                 <p>Monstera nije naporna kada je u pitanju zemljište. Ono što je neminovno bitno je da zemljište bude dobro propusno. Stručnjaci ističu da se jednom godišnje, kada monstera dostigne svoju maksimalnu visinu, zameni gornji sloj zemlje. Na taj način činite veliku uslugu Vašoj biljci koja će moći nastaviti svoj adekvatan razvoj.</p>
-                <figure><img src="img/soil.jpg" alt="Mesavina za zemljiste biljke" height="500">
+                <figure><img src="img/soil.jpg" alt="Zemljiste za monsteru" height="500">
                         <figcaption>Slika 10: Zemljiste za monsteru</figcaption>
                 </figure>
             </article>
@@ -127,7 +133,7 @@
                     <li>zimi temperaturu koja ne sme biti ispod 13°C</li>
                     <li>leti temperature od najmanje 24°C.</li>
                 </ul>
-                <figure><img src="img/temperature.jpg" alt="Biljka pored prozora" height="500">
+                <figure><img src="img/temperature.jpg" alt="Temperatura za monsteru" height="500">
                         <figcaption>Slika 11: Monstera deliciosa</figcaption>
                 </figure>
             </article>
@@ -136,7 +142,7 @@
             <article>
                 <h3>Svetlost</h3>
                 <p>Vrlo često se pominje da je monstera biljka polusenke i da nije baš najveći ljubitelj direktne sunčeve svetlosti. Iako obožava visoke temperature, najpogodnije za Vašu biljku bi bilo izbegavanje direktne svetlosti. Kao posledica toga mogu nastupiti žuti,a kasnije apsolutno sprženi listovi. Prema tome, ova biljka zahteva polusentovita mesta kako bi se pravilno razvijala.</p>
-                <figure class="sunburn"><img src="img/sunburn.jpg" alt="List biljke ostecen od Sunca" height="400">
+                <figure class="sunburn"><img src="img/sunburn.jpg" alt="Svetlost za monsteru" height="400">
                         <figcaption>Slika 12: Spaljeni delovi lista</figcaption>
                 </figure>
             </article>
@@ -148,7 +154,7 @@
                     <li>Monsteru leti zalivate 2 puta nedeljno,</li>
                     <li>dok je zimi najbolje da to činite jednom u dve nedelje.</li>
                 </ul>
-                <figure><img src="img/watering.jpg" alt="Zena zaliva biljku" height="500">
+                <figure><img src="img/watering.jpg" alt="Zalivanje monstere" height="500">
                     <figcaption>Slika 13: Zalivanje monstere</figcaption>
                 </figure>
             </article>
@@ -161,7 +167,7 @@
                 <li>tečnim đubrivom na svake 2 i po nedelje</li>
                 <li>ako listovi ne poseduju adekvatno i prepoznatljivo zelenilo dodajte đubrivo bogato amonijakom ili kalijumom.</li>
             </ul>
-            <figure><img src="img/prihrana.jpg" alt="List biljke" height="400">
+            <figure><img src="img/prihrana.jpg" alt="Prihrana monstere" height="400">
                 <figcaption>Slika 14: List monstere</figcaption>
             </figure>
         </article>
