--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                                       Na ovom mestu mozete saznati sve vezano za negu monstera biljke, kao i adekvatne uslove za odgajanje iste." />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="shortcut icon" href="img/icon.jpg" type="image/x-icon">
+    <link rel="icon" href="favicon/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>Monstera family</title>
 </head>
