--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <title>Monstera family</title>
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v18.0" nonce="qt85XtEQ"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v18.0" nonce="lmnFjHe1"></script>
     <header>
         <h1>Monstera family</h1>
         <nav class="nav">
@@ -171,6 +175,10 @@
                 <figcaption>Slika 14: List monstere</figcaption>
             </figure>
         </article>
+        <div class="likeandshare">
+            <div class="fb-share-button" data-href="https://github.com/ninazollnerit78/Projekat-VK/blob/main/index.html" data-layout="" data-size=""><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgithub.com%2Fninazollnerit78%2FProjekat-VK%2Fblob%2Fmain%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Подели</a></div>
+            <div class="fb-like" data-href="https://github.com/ninazollnerit78/Projekat-VK/edit/main/index.html" data-width="" data-layout="" data-action="" data-size="" data-share="false"></div>
+        </div>
     </section>
     </main>
     <footer>
