--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="copyright" content="Nina Zollner">
     <meta name="description" content="Monstera family je sajt koji sadrzi informacije i vrste o porodici biljaka monstere. 
                                       Na ovom mestu mozete saznati sve vezano za negu monstera biljke, kao i adekvatne uslove za odgajanje iste." />
+    <meta property="og:url" content="https://github.com/ninazollnerit78/Projekat-VK/edit/main/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Monstera family">
+    <meta property="og:description" content="Sajt koji sadrzi sve informacije o porodici biljaka monstera.">
+    <meta property="og:image" content="img/monstera_wallpaper.jpg">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="icon" href="favicon/favicon.ico">
